# auth-server

./: pyproject.toml
backend/: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/conf/docker/: entrypoint.sh
backend/libs/twilio/sms/: ACCURACY.md  README.md  client.py  config.py  exceptions.py  sender.py  types.py  verifier.py
backend/libs/twilio/sms/tests/: conftest.py
backend/libs/twilio/sms/tests/integration/: test_send_sms_real.py  test_validate_token_real.py
backend/libs/twilio/sms/tests/unit/: test_client.py  test_config.py  test_exceptions.py  test_sender.py  test_types.py  test_verifier.py
backend/project/: settings.py  urls.py
backend/scripts/: create_db.sh
docs/: 00-requirements.md  01-personas.md  02-functionalities.md  03-security.md  README.md
docs/backend/: 01-architecture.md  README.md  django-apps-instructions.md  llm-instructions.md  out-of-scope.md
docs/backend/apps/: 00-audit-app.md  00-realms-app.md  01-compliance-app.md  02-apps-app.md  03-wehhooks-app.md  04-permissions-app.md  05-users-app.md  06-auth-app.md  07-security-app.md  08-metrics-app.md  09-passkey-app.md
docs/backend/django-apps/: django_hsb_inapp_notifier.md  django_hsb_mailer.md  django_hsb_totp.md  django_hsb_twilio.md
docs/backend/libs/: 00-doc-introduction.md  00-introduction.md  01-twilio.md  02-aws.md  03-totp-app.md  04-email.md  05-ratelimit.md
docs/frontend/screens/: 01-Screens_with_Possible_States.csv  02-User_Stories_per_Journey.csv
docs/frontend/screens/components/: 00-instructions.md
docs/frontend/screens/components/route/: 01-AdditionalInfoForm.md  02-ChangePasswordForm.md  03-ConsentToggleList.md  04-DeviceConfirmationCard.md  05-EmailVerificationHandler.md  06-ExportDataSummary.md  07-ForgotPasswordForm.md  08-LinkedProvidersManager.md  09-LoginForm.md  (+12 more)
docs/frontend/user-journey/: 00-introduction.md  01-journey_user-registration-email.md  02-journey_user-registration-social.md  02-screens-user-stories.md  03-journey_login-email-pass.md  04-journey_login-social.md  05-journey_email-verification.md  06-journey_phone-verification.md  07-journey_mfa-setup.md  08-journey_mfa-login-challenge.md  09-journey_login-suspicious-device.md  10-journey_terms-accept.md  12-journey_link-unlink-social-provider.md  13-journey_change-password.md  14-journey_forgot-password.md  15-journey_user-password-reset.md  16-journey_view-and-revoke-active-sessions.md  17-journey_export-personal-data.md  18-journey_view-my-devices.md  19-journey_view-inapp-notifications.md  20-journey_device-trust-recognized.md  README.md
(+13 files in other folders)
